first line for android

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="button_send">SEND</string>
 
     <string name="title_activity_display_message">MY MESSAGE</string>
+    <string name="info_list">Info List</string>
 </resources>
