--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">SECRET LIST</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -11,4 +11,5 @@
 
     <string name="title_activity_display_message">MY MESSAGE</string>
     <string name="info_list">Info List</string>
+    <string name="title_secret_detail">SECRET DETAIL</string>
 </resources>
