--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="title_activity_display_message">MY MESSAGE</string>
     <string name="info_list">Info List</string>
     <string name="title_secret_detail">SECRET DETAIL</string>
+    <string name="add_secret_info">ADD</string>
 
     <string-array name="planets_array">
         <item>Mercury</item>
